Document::updateHoverActiveState only cancel hover and active state when hitting native scrollbar

This patch is change Document::updateHoverActiveState argument bool hitScrollbar
to Scrollbar hitScrollbar and check hitScrollbar is native scrollbar. This patch
can make `div:hover::-webkit-scrollbar-thumb` working correctly.

BUG=667206

Review-Url: https://codereview.chromium.org/2523903002
Cr-Commit-Position: refs/heads/master@{#434298}

Former-commit-id: bb7a6b0e1d0b5ca9aab24b7e794dc1d1e81c25db