third_party/WebKit/Source/core/dom/Document.h
@@ -156,6 +156,7 @@ class ScriptRunner;
 class ScriptableDocumentParser;
 class ScriptedAnimationController;
 class ScriptedIdleTaskController;
+class Scrollbar;
 class SecurityOrigin;
 class SegmentedString;
 class SelectorQueryCache;
@@ -727,9 +728,7 @@ class CORE_EXPORT Document : public ContainerNode,
   void hoveredNodeDetached(Element&);
   void activeChainNodeDetached(Element&);
 
-  void updateHoverActiveState(const HitTestRequest&,
-                              Element*,
-                              bool hitScrollbar);
+  void updateHoverActiveState(const HitTestRequest&, Element*, Scrollbar*);
 
   // Updates for :target (CSS3 selector).
   void setCSSTarget(Element*);
